Fixed styles on mobile

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -10,6 +10,10 @@ a {
     text-decoration: none;
 }
 
+img {
+    vertical-align: middle;
+}
+
 hr {
     border: none;
     border: 1px solid @dark-light-grey;
