--- a/styles/less/works.less
+++ b/styles/less/works.less
@@ -119,10 +119,10 @@
         }
     
         &__slider {
+            display: flex;
+            height: 100%;
             flex: 1;
-            background: #fafafa;
-            overflow: hidden;
-    
+            
             img {
                 object-fit: cover;
                 height: 100%;
@@ -146,11 +146,13 @@
         &__info {
 
             &-top {
-                margin: 30px 30px 0;
+                // margin: 30px 30px 0;
+                margin-right: 30px;
+                margin-left: 30px;
             }
     
             &-footer {
-                margin: 0 30px 30px;
+                // margin: 0 30px 30px;
             }
         }
     }
